msa/vivaldi/kafka/510-vivaldi-queue-kafka-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: queue-kafka
  labels:
    app: queue-kafka
    version: 1.0.0
    release: vivaldi
spec:
  host: vivaldi-queue-kafka
  trafficPolicy:
    tls:
      mode: DISABLE
